<resources>
    <string name="app_name">fbook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_book">书架</string>
    <string name="main_find">找书</string>
    <string name="main_mine">我</string>

    <string name="action_settings">Settings</string>
    <string name="action_select_file">导入书本</string>
    <string name="action_search_file">搜索文件</string>
    <string name="action_add_bookmark">添加书签</string>
    <string name="action_read_book">读书</string>

    <string name="press_twice_to_exit">连续点击才能退出</string>
    <string name="root">根目录</string>
    <string name="add_files">加入书架</string>
    <string name="choose_all">全选</string>
    <string name="delete">取消</string>
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">书签</string>
    <string name="bookpop_send">跳转</string>

    <string name="read_setting_directory">目录</string>
    <string name="read_setting_night">夜间</string>
    <string name="read_setting_day">日间</string>
    <string name="read_setting_pagemode">翻页</string>
    <string name="read_setting_set">设置</string>
    <string name="read_setting_pre">上一章</string>
    <string name="read_setting_next">下一章</string>

    <string name="setting_system">系统</string>
    <string name="setting_dark">暗</string>
    <string name="setting_bright">亮</string>
    <string name="setting_add">A+</string>
    <string name="setting_subtract">A-</string>
    <string name="setting_default">默认</string>

    <string name="font_default">系统默认</string>
    <string name="font_qihei">羿创旗黑</string>
    <string name="font_xinshou">新宋体</string>
    <string name="font_wawa">娃娃体</string>
    <string name="font_fzxinghei">行黑</string>
    <string name="font_fzkatong">卡通</string>
    <string name="font_bysong">繁宋体</string>

    <string name="page_mode_simulation">仿真</string>
    <string name="page_mode_cover">覆盖</string>
    <string name="page_mode_slide">滑动</string>
    <string name="page_mode_none">无</string>

    <string name="readseting">设置</string>
    <string name="default_text">默认</string>
    <string name="search_book">找书</string>

    <string-array name="down_status">
        <item>未下载</item>
        <item>下载中</item>
        <item>已下载</item>
    </string-array>

</resources>
