<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">

    <com.ouer.fbook.view.PageWidget
        android:id="@+id/bookpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bookpop_bottom"
                android:baselineAligned="false"
                android:background="@color/read_dialog_bg"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_pre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/read_setting_pre"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        />


                    <TextView
                        android:id="@+id/tv_next"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/read_setting_next"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_directory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/directory"
                        android:gravity="center"
                        android:text="@string/read_setting_directory" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_dayornight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/dayornight"
                        android:gravity="center"
                        android:text="@string/read_setting_night" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_pagemode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/pagemode"
                        android:gravity="center"
                        android:text="@string/read_setting_pagemode" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/setting"
                        android:gravity="center"
                        android:text="@string/read_setting_set" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
